[package]
name = "reactphysics3d-sys"
version = "0.0.1"
edition = "2021"
links = "reactphysics3d"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
dunce = "1.0.2"

[build-dependencies.cc]
features = ["parallel"]
version = "1.0.70"
